<resources>
    <string name="app_name">HornModbusTool</string>


    <string name="string_log">Журнал</string>

    <string name="string_main_title">Устройства</string>

    <string name="string_save_log">Сохранить журнал</string>
    <string name="string_load_log">Загрузить журнал</string>
    <string name="string_support_log">Получить техническую поддержку</string>
    <string name="string_help_log">Справка</string>

    <string name="string_save_device_map">Сохранить карту</string>
    <string name="string_load_device_map">Загрузить карту</string>

    <string name="string_settings">Установки</string>
    <string name="string_collapse_all">Свернуть всё</string>

    <string name="string_auto_query">Автоматический опрос</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="dialog_hint_file_name">Введите имя файла (расширение не требуется)</string>

    <string name="error_invalid_file_name">Invalid file name</string>
    <string name="error_empty_field">This field is required</string>

    <string name="menu_item_save">Сохранить</string>
    <string name="confirm_overwrite_file">Перезаписать файл ?</string>
    <string name="label_button_overwrite">Перезаписать</string>
    <string name="label_button_cancel">Отмена</string>

    <string name="mb_device_name">Имя устройства Modbus:</string>
    <string name="mb_device_id">Slave ID:</string>

    <string name="mdo_value_hint">Значение ОДМ:</string>
    <string name="mdo_name_hint">Имя ОДМ</string>
    <string name="mdo_starting_address_hint">Начальный адрес</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>