<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_load_log"
        android:title="@string/string_load_log"
        android:icon="@drawable/baseline_file_download_48"
        android:orderInCategory="1"
        app:showAsAction="always" />
    <item android:id="@+id/menu_save_log"
        android:title="@string/string_save_log"
        android:icon="@drawable/baseline_file_upload_48"
        android:orderInCategory="2"
        app:showAsAction="always" />
    <item android:id="@+id/menu_support_log"
        android:title="@string/string_support_log"
        android:icon="@drawable/support_48px"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_help_log"
        android:title="@string/string_help_log"
        android:icon="@drawable/help_48px"
        android:orderInCategory="4"
        app:showAsAction="ifRoom" />
</menu>